--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h3> The GPDMP mainly worls on five different stages.</h3>
         
          <figure class="logo" >
-            <img src="slider banner.jpg"   />
+            <img src="slider banner.jpg" height="400px" width="1100px" />
              <figcaption>STAGES OF GRAM PANCHAYAT DEVELOPMENT</figcaption>
             </figure><hr>
         <table border="0">
